Prevent unsightly gaps above nav and link site logos back to the site they apply to

--- a/wp-content/universal-assets/v1/scss/universal-globals.scss
+++ b/wp-content/universal-assets/v1/scss/universal-globals.scss
@@ -1,4 +1,11 @@
 // a little normalization of our own
+body {
+    position: absolute;
+    top: 0px;
+    &.admin-bar {
+        margin-top: 32px;
+    }
+}
 body > div {
     font-size: 1rem; // undo genesis font sizing
 }
